--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body{
   color: #f3f3f3;
   background: #0b0f16;
 }
+body {
+  background-image: url("./assets/img/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
 
 /* Links */
 a{ color: inherit; text-decoration: none; }
