--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ p{ margin: 0 0 12px 0; line-height: 1.6; }
   line-height: 1.6;
 }
 .card img {
+  display: block;
   width: 100%;
   height: 180px;
   object-fit: cover;
